fix: removed extra white spaces

--- a/menu-app/src/app/menu/menu.component.scss
+++ b/menu-app/src/app/menu/menu.component.scss
@@ -10,7 +10,8 @@
 
 h1{
   font-size: 20px;
-  margin: 2em;
+  margin: 1em;
+  font-weight: bold;
 }
 
 
